Added OAuth Single Sign On and Updated Homepage Documentation

--- a/SampleApps/Web/Views/Home/Index.cshtml
+++ b/SampleApps/Web/Views/Home/Index.cshtml
@@ -10,6 +10,12 @@
         allows rapid development against the API and provides a sound starting point for development.  This web application
         provides several standard samples to assist in getting started.
     </p>
+
+    <p>
+        Many of these samples will require you to obtain a more powerful APIClient and Secret.  A readonly client has been provided
+        with this sample that will allow basic querying of address data and allow you to authenticate.  Other actions will be broken
+        until you update the appsettings.json file a more powerful APIClient.
+    </p>
         <h5>Initialize the Wrapper</h5>
 
         <div id="editor">
