--- a/SampleApps/Web/Views/Shared/_Layout.cshtml
+++ b/SampleApps/Web/Views/Shared/_Layout.cshtml
@@ -32,7 +32,15 @@
                                 <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="CreateRecords">Create Record(s)</a>
                                 <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="UpdateRecords">Update Record(s)</a>
                                 <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="#">Something else here</a>
+                                <a class="dropdown-item" href="#"><em>More to come!</em></a>
+                            </div>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Authentication
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="TestAuthentication">Single Sign On (SSO)</a>
                             </div>
                         </li>
                     </ul>
