Separated Authentication Controller

--- a/SampleApps/Web/Views/Shared/_Layout.cshtml
+++ b/SampleApps/Web/Views/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
                                 Authentication
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="TestAuthentication">Single Sign On (SSO)</a>
+                                <a class="dropdown-item" asp-area="" asp-controller="Authenticate" asp-action="Index">Single Sign On (SSO)</a>
                             </div>
                         </li>
                     </ul>
